--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>
             <div class="secondes-container">
                 <p class="big-text" id="secondes">0</p>
-                <span>secondes</span>
+                <span>seconds</span>
             </div>
         </div>
     </div>
