--- a/index.htm
+++ b/index.htm
@@ -20,11 +20,11 @@
             </div>
             <div class="minutes-container">
                 <p class="big-text" id="minutes">0</p>
-                <span>mins</span>
+                <span>Mins</span>
             </div>
             <div class="secondes-container">
                 <p class="big-text" id="secondes">0</p>
-                <span>seconds</span>
+                <span>Seconds</span>
             </div>
         </div>
     </div>
